--- a/pipeline.yml
+++ b/pipeline.yml
@@ -22,7 +22,8 @@ resources:
       password: ((git.password))
       # determines what files trigger the pipeline, replace with "ignore_paths" if more files need to trigger
       paths:
-        - ((project_root))  # replace with source file(s) if no project root directory
+        - src  # replace with source file(s) if no project root directory
+        - configs
         - Dockerfile
         - requirements.txt
   # resource for writing to repository; write-only to avoid retriggering pipeline
@@ -146,7 +147,7 @@ jobs:
               - -exc
               - |
                 cd bump-repo
-                yq -i '.spec.template.spec.containers[0].image = "((gitlab.repository))/((image)):((.:version_num))"' ((manifest_path))
+                yq -i '.spec.jobTemplate.spec.template.spec.containers[0].image = "((gitlab.repository))/((image)):((.:version_num))"' ((manifest_path))
             user: root
       - task: git-commit-bump
         config:
