--- a/ServiceNow-Warranty-Updater-cronjob.yaml
+++ b/ServiceNow-Warranty-Updater-cronjob.yaml
@@ -36,7 +36,7 @@ spec:
             vault.hashicorp.com/agent-pre-populate-only: "true"
         spec:
           containers:
-            - image: registry.quokka.ninja/ccfs/servicenow-warranty-updater:2.0.16
+            - image: harbor.k3s.quokka.ninja/library/servicenow-warranty-updater:2.0.16
               imagePullPolicy: Always
               name: servicenow-warranty-updater
               args: ['/bin/bash', '-c', 'source /vault/secrets/main-secrets && source /vault/secrets/servicenow-warranty-updater-secrets && python ./src/ServiceNow-Warranty-Updater.py']
